--- a/main.kv
+++ b/main.kv
@@ -2,6 +2,7 @@
 #: import Clock kivy.clock.Clock
 
 MDScreen:
+  md_bg_color:app.theme_cls.bg_darkest
   name:"main"
   MDCard:
     size_hint:None,None
@@ -20,11 +21,80 @@ MDScreen:
           font_size:"25sp"
           font_name:"assets/Poppins-Bold.ttf"
   AnchorLayout:
-    MDIconButton:
-      icon:"account-supervisor-outline"
-      theme_icon_color:"Custom"
-      icon_color:app.theme_cls.bg_light
-      icon_size:dp(100)
+    ScreenManager:
+      size_hint:None,None
+      size:app.x,app.y-dp(140)
+      id:tab_manager
+      MDScreen:
+        name:"chat"
+        md_bg_color:app.theme_cls.bg_darkest
+        AnchorLayout:
+          MDIconButton:
+            icon:"account-supervisor-outline"
+            theme_icon_color:"Custom"
+            icon_color:app.theme_cls.bg_light
+            icon_size:dp(100)
+        MDCard:
+          pos_hint:{"center_x":0.85,"center_y":0.15}
+          radius:dp(10)
+          md_bg_color:app.theme_cls.primary_light
+          size_hint:None,None 
+          size:dp(60),dp(60)
+          ripple_behavior:True
+          MDIconButton:
+            size_hint:1,1
+            icon:"plus"
+      MDScreen:
+        name:"server"
+        md_bg_color:app.theme_cls.bg_darkest
+        AnchorLayout:
+          MDIconButton:
+            icon:"cloud-outline"
+            theme_icon_color:"Custom"
+            icon_color:app.theme_cls.bg_light
+            icon_size:dp(100)
+
+  MDCard:
+    id:control
+    pos_hint:{"center_x":0.5,"center_y":0.95}
+    size_hint:None,None
+    size:[app.x-dp(25),dp(50)]
+    radius:dp(10)
+    RelativeLayout:
+      MDCard:
+        id:card
+        pos_hint:{"center_x":0.25,"center_y":0.5}
+        md_bg_color:app.theme_cls.accent_dark
+        size_hint:None,None 
+        size:control.width//2-dp(10),dp(40)    
+        radius:dp(10) 
+
+      MDBoxLayout:
+        AnchorLayout:
+          MDCard:
+            pos_hint:{"center_x":0.25,"center_y":0.5}
+            md_bg_color:0,0,0,0
+            size_hint:None,None 
+            size:control.width//2-dp(10),dp(40)
+            on_press:app.animate_pos_hint(card,self.pos_hint);tab_manager.transition.direction = "right";tab_manager.current = "chat"
+            MDLabel:
+              text:"Chat"
+              halign:"center"
+              font_name:"assets/Poppins-Medium.ttf"
+        AnchorLayout:
+          MDCard:
+            pos_hint:{"center_x":0.75,"center_y":0.5}
+            md_bg_color:0,0,0,0
+            size_hint:None,None 
+            size:control.width//2-dp(10),dp(40)
+            on_press:app.animate_pos_hint(card,self.pos_hint);tab_manager.transition.direction = "left";tab_manager.current = "server"
+
+            MDLabel:
+              text:"Server"
+              halign:"center"
+              font_name:"assets/Poppins-Medium.ttf"
+
+
 
   MDCard:
     id:drawer
@@ -47,4 +117,11 @@ MDScreen:
         AnchorLayout:
           anchor_y:"top"
           MDLabel:
+            size_hint:None,None 
+            size:app.x//1.5,dp(50)
             text:"PrivaChat"
+            halign:"center"
+            font_name:"assets/Poppins-Bold.ttf"
+            font_size:"25sp"
+
+
