--- a/main.kv
+++ b/main.kv
@@ -132,12 +132,12 @@ MDScreen:
 		radius:0
 		MDCard:
 			size_hint:None,None
-			size:[app.x//1.5,app.y]
+			size:[dp(280),app.y]
 			radius:[0,dp(20),dp(20),0]
 			orientation: 'vertical'
 			MDLabel:
 				size_hint:None,None 
-				size:app.x//1.5,dp(50)
+				size:dp(280),dp(50)
 				text:"PrivaChat"
 				halign:"center"
 				valign:"bottom"
@@ -145,7 +145,7 @@ MDScreen:
 				font_size:"25sp"
 			MDLabel:
 				size_hint:None,None 
-				size:app.x//1.5,dp(30)
+				size:dp(280),dp(30)
 				text:"Made with Love and Python"
 				halign:"center"
 				font_name:"assets/Poppins-Regular.ttf"
@@ -160,11 +160,11 @@ MDScreen:
 					size:dp(20),dp(20)
 				AnchorLayout:
 					size_hint:None,None 
-					size:[app.x//1.5,dp(80)]
+					size:[dp(280),dp(80)]
 					MDCard:
 						ripple_behavior:True
 						size_hint:None,None 
-						size:[app.x//1.5-dp(20),dp(80)]
+						size:[dp(280)-dp(20),dp(80)]
 						radius:dp(10)
 						md_bg_color:app.theme_cls.primary_dark
 						RelativeLayout:
@@ -181,11 +181,11 @@ MDScreen:
 
 				AnchorLayout:
 					size_hint:None,None 
-					size:[app.x//1.5,dp(80)]
+					size:[dp(280),dp(80)]
 					MDCard:
 						ripple_behavior:True
 						size_hint:None,None 
-						size:[app.x//1.5-dp(20),dp(80)]
+						size:[dp(280)-dp(20),dp(80)]
 						radius:dp(10)
 						md_bg_color:app.theme_cls.accent_color
 						RelativeLayout:
@@ -203,7 +203,7 @@ MDScreen:
 					radius:0,dp(10),dp(10),0
 					size_hint:None,None 
 					radius:0,dp(10),dp(10),0
-					size:app.x//1.5-dp(10),dp(50)
+					size:dp(280)-dp(10),dp(50)
 					on_enter: self.md_bg_color = app.theme_cls.bg_normal
 					on_leave:self.md_bg_color = 0,0,0,0
 					RelativeLayout:
@@ -219,7 +219,7 @@ MDScreen:
 				HoverLayout:
 					radius:0,dp(10),dp(10),0
 					size_hint:None,None 
-					size:app.x//1.5-dp(10),dp(50)
+					size:dp(280)-dp(10),dp(50)
 					on_enter: self.md_bg_color = app.theme_cls.bg_normal
 					on_leave:self.md_bg_color = 0,0,0,0
 					RelativeLayout:
@@ -235,7 +235,7 @@ MDScreen:
 				HoverLayout:
 					radius:0,dp(10),dp(10),0
 					size_hint:None,None 
-					size:app.x//1.5-dp(10),dp(50)
+					size:dp(280)-dp(10),dp(50)
 					on_enter: self.md_bg_color = app.theme_cls.bg_normal
 					on_leave:self.md_bg_color = 0,0,0,0
 					RelativeLayout:
