--- a/kvfiles/settings_view.kv
+++ b/kvfiles/settings_view.kv
@@ -12,18 +12,26 @@
 			pos_hint:{"center_x":0.8,"center_y":0.3}
 
 ModalView:
+	on_open:app.open_modal(self)
+	on_dismiss:app.close_modal(self)
 	background_color:app.theme_cls.bg_normal
-	MDLabel:
-		text:"Settings"
-		bold:True
-		font_name:"assets/Poppins-Medium.ttf"
-		font_size:"35sp"
-	MDBoxLayout:
-		md_bg_color:app.theme_cls.bg_normal
-		orientation: 'vertical'
-		padding:dp(10)
-		ListSwitch:
-			text:"Dark mode"
-		ListSwitch:
-			text:"Save chats"
+	opacity:0
+	RelativeLayout:
+		MDLabel:
+			pos_hint:{"center_x":0.6,"center_y":0.95}
+			text:"Settings"
+			bold:True
+			font_name:"assets/Poppins-Bold.ttf"
+			font_size:"35sp"
+		MDCard:
+			size_hint:None,None
+			size:app.x,dp(200)
+			pos_hint:{"center_x":0.5,"center_y":0.85}
+			md_bg_color:0,0,0,0
+			orientation: 'vertical'
+			padding:dp(10)
+			ListSwitch:
+				text:"Dark mode"
+			ListSwitch:
+				text:"Save chats"
 
