--- a/kvfiles/chat_connect.kv
+++ b/kvfiles/chat_connect.kv
@@ -2,6 +2,7 @@ ModalView:
 	on_open:app.open_modal(self)
 	on_dismiss:app.close_modal(self)
 	background_color: (0,0,0,0.3)
+	opacity:0
 	RelativeLayout:
 		MDCard:
 			pos_hint:{"center_x":0.5,"center_y":0.7}
@@ -26,3 +27,4 @@ ModalView:
 					text:"Connect"
 					md_bg_color:app.theme_cls.accent_color
 					font_name:"assets/Poppins-Regular.ttf"
+					on_press:app.chat.open()
