--- a/main.kv
+++ b/main.kv
@@ -43,7 +43,7 @@ MDScreen:
 					size_hint:None,None 
 					size:app.x-dp(80),dp(60)
 					ripple_behavior:True
-					on_press:app.connect_chat()
+					on_press:app.chat_view.open()
 					RelativeLayout:
 						MDLabel:
 							text:"Connect to server"
@@ -71,7 +71,7 @@ MDScreen:
 					size_hint:None,None 
 					size:app.x-dp(80),dp(60)
 					ripple_behavior:True
-					on_press:app.start_server()
+					on_press:app.server_view.open()
 					RelativeLayout:
 						MDLabel:
 							text:"Start a Server"
@@ -208,7 +208,7 @@ MDScreen:
 					size:dp(280)-dp(10),dp(50)
 					on_enter: app.animate_md_bg_color(self,md_bg_color=app.theme_cls.bg_normal)
 					on_leave: app.animate_md_bg_color(self,md_bg_color=[0,0,0,0])
-					on_press:app.open_settings()
+					on_press:app.settings_view.open()
 					RelativeLayout:
 						MDLabel:
 							pos_hint:{"center_x":0.25,"center_y":0.5}
