--- a/kvfiles/chat.kv
+++ b/kvfiles/chat.kv
@@ -33,43 +33,51 @@ ModalView:
 	on_open:app.open_modal(self)
 	on_dismiss:app.close_modal(self)
 	opacity:0
-	MDRelativeLayout:
-		md_bg_color:app.theme_cls.bg_darkest
-		FitImage:
-			source:app.chat_img
-		AnchorLayout:
-			anchor_y:"top"
-			md_bg_color:0,0,0,0
-			ScrollView:
+	AnchorLayout:
+		anchor_y:"top"
+		MDRelativeLayout:
+			id:main_handler
+			md_bg_color:app.theme_cls.bg_darkest
+			FitImage:
+				source:app.chat_img
+			AnchorLayout:
+				anchor_y:"top"
+				md_bg_color:0,0,0,0
+				ScrollView:
+					size_hint:None,None 
+					size:app.x,app.y-dp(70)
+					id:view
+					scroll_type:["bars", "content"]
+					MDGridLayout:
+						id:chat_handler
+						adaptive_height:True
+						cols:1
+
+			MDCard:
 				size_hint:None,None 
-				size:app.x,app.y-dp(70)
-				id:view
-				scroll_type:["bars", "content"]
-				MDGridLayout:
-					id:chat_handler
-					adaptive_height:True
-					cols:1
-
-		MDCard:
-			size_hint:None,None 
-			size:app.x-dp(90),dp(40)
-			pos_hint:{"center_x":0.43,"center_y":0.07}
-			md_bg_color:app.theme_cls.bg_light
-			radius:dp(10)
-			MDTextField:
-				id:text_feild
-				mode:"fill"
-				max_text_length:72
-				radius:dp(10),dp(10),dp(10),dp(10)
-				line_color_normal:0,0,0,0
-				line_color_focus:0,0,0,0
-				active_line:False
-				font_name:"assets/Poppins-Regular.ttf"
+				size:app.x-dp(90),dp(40)
+				pos_hint:{"center_x":0.43,"center_y":0.07}
+				md_bg_color:app.theme_cls.bg_light
+				radius:dp(10)
+				MDTextField:
+					id:text_feild
+					hint_text:"Enter the message"
+					font_name_hint_text:"assets/Poppins-Regular.ttf"
+					mode:"fill"
+					max_text_length:72
+					radius:dp(10),dp(10),dp(10),dp(10)
+					line_color_normal:0,0,0,0
+					line_color_focus:0,0,0,0
+					active_line:False
+					font_name:"assets/Poppins-Regular.ttf"
+					on_focus:app.change_size_keyboard(main_handler)
+					keyboard_suggestions:True
+					on_text_validate:app.handle_chat(text_feild,chat_handler.add_widget,view)
 
 
-		MDIconButton:
-			pos_hint:{"center_x":0.9,"center_y":0.075}
-			md_bg_color:app.theme_cls.primary_color
-			icon:"send"
-			on_press:app.handle_chat(text_feild,chat_handler,view)
+			MDIconButton:
+				pos_hint:{"center_x":0.9,"center_y":0.075}
+				md_bg_color:app.theme_cls.primary_color
+				icon:"send"
+				on_press:app.handle_chat(text_feild,chat_handler.add_widget,view)
 
