--- a/kvfiles/server_start.kv
+++ b/kvfiles/server_start.kv
@@ -21,9 +21,25 @@ ModalView:
 							text:"Enter the Port"
 							font_name:"assets/Poppins-Medium.ttf"
 							halign:"center"
+				AnchorLayout:
+					pos_hint:{"center_x":0.5,"center_y":0.5}
+					size_hint:None,None 
+					size:app.x-dp(60),dp(50)
+					MDTextField:
+						id:test_text_feild
+						mode:"fill"
+						max_text_length:72
+						radius:dp(10),dp(10),dp(10),dp(10)
+						line_color_normal:0,0,0,0
+						line_color_focus:0,0,0,0
+						hint_text:"Enter the port"
+						font_name_hint_text:"assets/Poppins-Regular.ttf"
+						active_line:False
+						font_name:"assets/Poppins-Regular.ttf"
 				MDFlatButton:
 					pos_hint:{"center_x":0.5,"center_y":0.2}
 					radius:dp(10)
 					text:"Start"
 					md_bg_color:app.theme_cls.primary_color
 					font_name:"assets/Poppins-Regular.ttf"
+					#on_press:app.start_server(test_text_feild.text) if len(test_text_feild.text) > 3 and type(int(test_text_feild.text)) = int else print("Invalid ") 
