--- a/kvfiles/chat.kv
+++ b/kvfiles/chat.kv
@@ -1,32 +1,57 @@
 
 <ChatText>:
 	text:""
-	adaptive_height:True
-	MDCard:
-		pos_hint:{"center_x":0.6,"center_y":0.5}
-		radius:dp(10),0,0,dp(10)
+	nickname:app.nickname
+	size_hint:None,None 
+	size:app.x,dp(70)
+	AnchorLayout:
+		anchor_x:"right"
 		size_hint:None,None 
-		size:app.x-dp(70),dp(70)
-		padding:dp(10) 
-		orientation:"vertical"
-		MDLabel:
-			text:root.text
-			font_name:"assets/Poppins-Regular.ttf"
+		size:app.x,dp(70)
+		MDCard:
+			radius:dp(10),0,0,dp(10)
+			size_hint:None,None 
+			size:app.x-dp(70),dp(70)
+			padding:dp(10) 
+			orientation:"vertical"
+			md_bg_color:app.theme_cls.primary_color
+			RelativeLayout:
+				MDLabel:
+					pos_hint:{"center_x":0.5,"center_y":0.99}
+					text:root.nickname+" "+app.date()
+					font_name:"assets/Poppins-Medium.ttf"
+					font_size:dp(7)
+
+				MDLabel:
+					text:root.text
+					font_name:"assets/Poppins-Regular.ttf"
 
 <PersonText>:
-	adaptive_height:True
 	text:""
-	MDCard:
-		pos_hint:{"center_x":0.4,"center_y":0.5}
-		radius:0,dp(10),dp(10),0
+	nickname:''
+	size_hint:None,None 
+	size:app.x,dp(70)
+	AnchorLayout:
+		anchor_x:"left"
 		size_hint:None,None 
-		size:app.x-dp(70),dp(70)
-		padding:dp(10) 
-		orientation:"vertical"
-		md_bg_color:app.theme_cls.primary_color 
-		MDLabel:
-			text:root.text
-			font_name:"assets/Poppins-Regular.ttf"
+		size:app.x,dp(70)
+		MDCard:
+			radius:0,dp(10),dp(10),0
+			size_hint:None,None 
+			size:app.x-dp(70),dp(70)
+			padding:dp(10) 
+			orientation:"vertical"
+			md_bg_color:app.theme_cls.accent_color
+			RelativeLayout:
+				MDLabel:
+					pos_hint:{"center_x":0.5,"center_y":0.99}
+					text:root.nickname+" "+app.date()
+					font_name:"assets/Poppins-Medium.ttf"
+					font_size:dp(7)
+
+				MDLabel:
+					text:root.text
+					font_name:"assets/Poppins-Regular.ttf"
 
 ModalView:
 	background_color:0,0,0,0
@@ -54,6 +79,7 @@ ModalView:
 						id:chat_handler
 						adaptive_height:True
 						cols:1
+						spacing:dp(10)
 
 			MDCard:
 				size_hint:None,None 
@@ -66,7 +92,7 @@ ModalView:
 					hint_text:"Enter the message"
 					font_name_hint_text:"assets/Poppins-Regular.ttf"
 					mode:"fill"
-					max_text_length:72
+					max_text_length:app.chat_length
 					radius:dp(10),dp(10),dp(10),dp(10)
 					line_color_normal:0,0,0,0
 					line_color_focus:0,0,0,0
@@ -74,12 +100,11 @@ ModalView:
 					font_name:"assets/Poppins-Regular.ttf"
 					on_focus:app.change_size_keyboard(main_handler)
 					keyboard_suggestions:True
-					on_text_validate:app.handle_chat(text_feild,chat_handler.add_widget,view)
+					on_text_validate:app.client[0](text_feild.text)
 
 
 			MDIconButton:
 				pos_hint:{"center_x":0.9,"center_y":0.075}
 				md_bg_color:app.theme_cls.primary_color
 				icon:"send"
-				on_press:app.handle_chat(text_feild,chat_handler.add_widget,view)
-
+				on_press:app.client[0](text_feild.text)
