--- a/kvfiles/splash.kv
+++ b/kvfiles/splash.kv
@@ -1,3 +1,7 @@
 MDScreen:
 	name:'splash'
-	md_bg_color:0,0,0,1
+	md_bg_color:"#1D2227"
+	AnchorLayout:
+		Image:
+			source:"splash.png"
+			size_hint:1,1
