--- a/main.kv
+++ b/main.kv
@@ -114,13 +114,17 @@ MDScreen:
 		size:[app.x-dp(25),dp(50)]
 		radius:dp(10)
 		RelativeLayout:
+			MDSeparator:
+				orientation:"vertical"
+				pos_hint:{"center_x":0.5,"center_y":0.5}
+
 			MDCard:
 				id:card
 				pos_hint:{"center_x":0.25,"center_y":0.5}
 				md_bg_color:app.theme_cls.primary_dark
 				size_hint:None,None 
 				size:control.width//2-dp(10),dp(40)    
-				radius:dp(10) 
+				radius:dp(10)
 
 			MDBoxLayout:
 				AnchorLayout:
@@ -129,7 +133,7 @@ MDScreen:
 						md_bg_color:0,0,0,0
 						size_hint:None,None 
 						size:control.width//2-dp(10),dp(40)
-						on_press:app.animate_pos_hint(card,self.pos_hint,md_bg_color=app.theme_cls.primary_dark);tab_manager.transition.direction = "right";tab_manager.current = "chat"
+						on_press:app.animate_pos_hint(card,self.pos_hint,md_bg_color=app.theme_cls.primary_dark,radius=[dp(10),0,0,dp(10)]);tab_manager.transition.direction = "right";tab_manager.current = "chat"
 						MDLabel:
 							text:"Chat"
 							halign:"center"
@@ -140,7 +144,7 @@ MDScreen:
 						md_bg_color:0,0,0,0
 						size_hint:None,None 
 						size:control.width//2-dp(10),dp(40)
-						on_press:app.animate_pos_hint(card,self.pos_hint,md_bg_color=app.theme_cls.accent_color);tab_manager.transition.direction = "left";tab_manager.current = "server"
+						on_press:app.animate_pos_hint(card,self.pos_hint,md_bg_color=app.theme_cls.accent_color,radius=[0,dp(10),dp(10),0]);tab_manager.transition.direction = "left";tab_manager.current = "server"
 
 						MDLabel:
 							text:"Server"
