--- a/main.kv
+++ b/main.kv
@@ -6,7 +6,7 @@ MDScreen:
 	name:"main"
 	MDCard:
 		size_hint:None,None
-		size:[app.x,dp(70)]
+		size:[app.x(),dp(70)]
 		radius:[dp(10),dp(10),0,0]
 		RelativeLayout:
 			AnchorLayout:
@@ -24,7 +24,7 @@ MDScreen:
 	AnchorLayout:
 		ScreenManager:
 			size_hint:None,None
-			size:app.x,app.y-dp(140)
+			size:app.x(),app.y()-dp(140)
 			id:tab_manager
 			MDScreen:
 				name:"chat"
@@ -41,7 +41,7 @@ MDScreen:
 					radius:dp(10)
 					md_bg_color:app.theme_cls.primary_dark
 					size_hint:None,None 
-					size:app.x-dp(80),dp(60)
+					size:app.x()-dp(80),dp(60)
 					ripple_behavior:True
 					on_press:app.chat_view.open()
 					RelativeLayout:
@@ -72,7 +72,7 @@ MDScreen:
 					opacity:0
 					MDCard:
 						size_hint:None,None
-						size:app.x-dp(40),app.y//3+dp(40)
+						size:app.x()-dp(40),app.y()//3+dp(40)
 						ScrollView:
 							MDGridLayout:
 								id:server_loger
@@ -81,7 +81,7 @@ MDScreen:
 								padding:dp(10)
 								MDLabel:
 									size_hint:None,None
-									size:app.x-dp(40),dp(20)
+									size:app.x()-dp(40),dp(20)
 									text:"Logs start here"
 									font_name:"assets/SourceCodePro-Regular.otf"
 				MDCard:
@@ -89,7 +89,7 @@ MDScreen:
 					radius:dp(10)
 					md_bg_color:app.theme_cls.accent_color
 					size_hint:None,None 
-					size:app.x-dp(80),dp(60)
+					size:app.x()-dp(80),dp(60)
 					ripple_behavior:True
 					on_press:app.server_view.open() if app.server_running == False else app.stop_server()
 					RelativeLayout:
@@ -111,7 +111,7 @@ MDScreen:
 		id:control
 		pos_hint:{"center_x":0.5,"center_y":0.95}
 		size_hint:None,None
-		size:[app.x-dp(25),dp(50)]
+		size:[app.x()-dp(25),dp(50)]
 		radius:dp(10)
 		RelativeLayout:
 			MDSeparator:
@@ -164,7 +164,7 @@ MDScreen:
 		radius:0
 		MDCard:
 			size_hint:None,None
-			size:[dp(280),app.y]
+			size:[dp(280),app.y()]
 			radius:[0,dp(20),dp(20),0]
 			orientation: 'vertical'
 			MDLabel:
@@ -194,11 +194,11 @@ MDScreen:
 					size_hint:None,None 
 					size:[dp(280),dp(80)]
 					MDCard:
-						ripple_behavior:True
 						size_hint:None,None 
 						size:[dp(280)-dp(20),dp(80)]
 						radius:dp(10)
 						md_bg_color:app.theme_cls.primary_dark
+
 						RelativeLayout:
 							MDLabel:
 								pos_hint:{"center_x":0.35,"center_y":0.5}
@@ -210,27 +210,36 @@ MDScreen:
 								icon:"chat-remove-outline"
 								size_hint:1,1
 								ripple_scale:0
+							MDCard:
+								pos_hint:{"center_x":0.25,"center_y":0.5}
+								md_bg_color:0,0,0,0
+								on_press:app.open_drawer();app.animate_pos_hint(card,self.pos_hint,md_bg_color=app.theme_cls.primary_dark,radius=[dp(10),0,0,dp(10)]);tab_manager.transition.direction = "right";tab_manager.current = "chat"
 
 				AnchorLayout:
 					size_hint:None,None 
 					size:[dp(280),dp(80)]
 					MDCard:
-						ripple_behavior:True
 						size_hint:None,None 
 						size:[dp(280)-dp(20),dp(80)]
 						radius:dp(10)
 						md_bg_color:app.theme_cls.accent_color
+
 						RelativeLayout:
 							MDLabel:
 								pos_hint:{"center_x":0.3,"center_y":0.5}
 								text:"Stop Server"
 								font_name:"assets/Poppins-Medium.ttf"
 								halign:"center"
+			
 							IconButton:
 								pos_hint:{"center_x":0.85,"center_y":0.5}
 								icon:"cloud-off-outline"
 								size_hint:1,1
 								ripple_scale:0
+							MDCard:
+								pos_hint:{"center_x":0.75,"center_y":0.5}
+								md_bg_color:0,0,0,0
+								on_press:app.open_drawer();app.animate_pos_hint(card,self.pos_hint,md_bg_color=app.theme_cls.accent_color,radius=[0,dp(10),dp(10),0]);tab_manager.transition.direction = "left";tab_manager.current = "server"
 				HoverLayout:
 					radius:0,dp(10),dp(10),0
 					size_hint:None,None 
